tests/errors/mutability/test_tc_mut_03_compound_sub.pc
#import std.console;
int main() {
    int x = 5;
    x -= 2;
    return 0;
}
